--- a/aboutsniffer.ui
+++ b/aboutsniffer.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>697</width>
-    <height>420</height>
+    <height>423</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -38,6 +38,9 @@
       </item>
       <item>
        <widget class="QPlainTextEdit" name="plainTextEdit">
+        <property name="readOnly">
+         <bool>true</bool>
+        </property>
         <property name="plainText">
          <string>Copyright (c) 2012, Kristian Beres
 All rights reserved.
